--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@ngrx/entity": "8.3.0",
     "@ngrx/router-store": "8.3.0",
     "@ngrx/store": "8.3.0",
-    "@nrwl/angular": "8.12.11",
+    "@nrwl/angular": "9.0.4",
     "core-js": "^2.5.4",
     "document-register-element": "1.13.1",
     "firebase": ">= 5.5.7 <7",
@@ -55,18 +55,18 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.23",
-    "@angular/cli": "8.3.23",
+    "@angular-devkit/build-angular": "0.900.7",
+    "@angular/cli": "9.0.7",
     "@angular/compiler-cli": "8.2.14",
     "@angular/language-service": "8.2.14",
     "@babel/preset-react": "7.0.0",
     "@ngrx/store-devtools": "8.3.0",
-    "@nrwl/cypress": "8.12.11",
+    "@nrwl/cypress": "9.0.4",
     "@nrwl/insights": "^8.12.3",
-    "@nrwl/jest": "8.12.11",
-    "@nrwl/react": "8.12.11",
-    "@nrwl/web": "8.12.11",
-    "@nrwl/workspace": "8.12.11",
+    "@nrwl/jest": "9.0.4",
+    "@nrwl/react": "9.0.4",
+    "@nrwl/web": "9.0.4",
+    "@nrwl/workspace": "9.0.4",
     "@testing-library/react": "9.4.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
@@ -82,12 +82,12 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jest": "24.1.0",
     "jest-environment-jsdom-fourteen": "^0.1.0",
-    "jest-preset-angular": "7.0.0",
+    "jest-preset-angular": "8.0.0",
     "netlify": "^2.4.8",
     "prettier": "1.19.1",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "3.7.7"
   }
 }
