run migration to 9.0

--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,10 @@
               "apps/products/tsconfig.app.json",
               "apps/products/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/products/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/products/**"
+            ]
           }
         },
         "test": {
@@ -101,7 +104,8 @@
           "options": {
             "jestConfig": "apps/products/jest.config.js",
             "tsConfig": "apps/products/tsconfig.spec.json",
-            "setupFile": "apps/products/src/test-setup.ts"
+            "setupFile": "apps/products/src/test-setup.ts",
+            "passWithNoTests": true
           }
         },
         "deploy": {
@@ -138,7 +142,10 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "apps/products-e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**", "!apps/products-e2e/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/products-e2e/**"
+            ]
           }
         }
       }
@@ -222,7 +229,10 @@
               "apps/cart/tsconfig.app.json",
               "apps/cart/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/cart/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/cart/**"
+            ]
           }
         },
         "test": {
@@ -230,7 +240,8 @@
           "options": {
             "jestConfig": "apps/cart/jest.config.js",
             "tsConfig": "apps/cart/tsconfig.spec.json",
-            "setupFile": "apps/cart/src/test-setup.ts"
+            "setupFile": "apps/cart/src/test-setup.ts",
+            "passWithNoTests": true
           }
         },
         "deploy": {
@@ -267,7 +278,10 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "apps/cart-e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**", "!apps/cart-e2e/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/cart-e2e/**"
+            ]
           }
         }
       }
@@ -281,8 +295,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/product/types/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/product/types/**"]
+            "tsConfig": [
+              "libs/shared/product/types/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/product/types/**"
+            ]
           }
         }
       }
@@ -296,8 +315,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/product/data/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/product/data/**"]
+            "tsConfig": [
+              "libs/shared/product/data/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/product/data/**"
+            ]
           }
         }
       }
@@ -315,7 +339,10 @@
               "libs/shared/product/ui/tsconfig.lib.json",
               "libs/shared/product/ui/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/product/ui/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/product/ui/**"
+            ]
           }
         },
         "test": {
@@ -323,7 +350,8 @@
           "options": {
             "jestConfig": "libs/shared/product/ui/jest.config.js",
             "tsConfig": "libs/shared/product/ui/tsconfig.spec.json",
-            "setupFile": "libs/shared/product/ui/src/test-setup.ts"
+            "setupFile": "libs/shared/product/ui/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       }
@@ -341,7 +369,10 @@
               "libs/products/home-page/tsconfig.lib.json",
               "libs/products/home-page/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/products/home-page/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/products/home-page/**"
+            ]
           }
         },
         "test": {
@@ -349,7 +380,8 @@
           "options": {
             "jestConfig": "libs/products/home-page/jest.config.js",
             "tsConfig": "libs/products/home-page/tsconfig.spec.json",
-            "setupFile": "libs/products/home-page/src/test-setup.ts"
+            "setupFile": "libs/products/home-page/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       },
@@ -372,7 +404,10 @@
               "libs/cart/cart-page/tsconfig.lib.json",
               "libs/cart/cart-page/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/cart/cart-page/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/cart/cart-page/**"
+            ]
           }
         },
         "test": {
@@ -380,7 +415,8 @@
           "options": {
             "jestConfig": "libs/cart/cart-page/jest.config.js",
             "tsConfig": "libs/cart/cart-page/tsconfig.spec.json",
-            "setupFile": "libs/cart/cart-page/src/test-setup.ts"
+            "setupFile": "libs/cart/cart-page/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       }
@@ -394,8 +430,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/e2e-utils/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/e2e-utils/**"]
+            "tsConfig": [
+              "libs/shared/e2e-utils/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/e2e-utils/**"
+            ]
           }
         }
       }
@@ -409,8 +450,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/jsxify/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/jsxify/**"]
+            "tsConfig": [
+              "libs/shared/jsxify/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/jsxify/**"
+            ]
           }
         }
       }
@@ -428,7 +474,10 @@
               "libs/shared/cart/state/tsconfig.lib.json",
               "libs/shared/cart/state/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/cart/state/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/cart/state/**"
+            ]
           }
         },
         "test": {
@@ -436,7 +485,8 @@
           "options": {
             "jestConfig": "libs/shared/cart/state/jest.config.js",
             "tsConfig": "libs/shared/cart/state/tsconfig.spec.json",
-            "setupFile": "libs/shared/cart/state/src/test-setup.ts"
+            "setupFile": "libs/shared/cart/state/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       },
@@ -459,7 +509,10 @@
               "libs/shared/product/state/tsconfig.lib.json",
               "libs/shared/product/state/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/product/state/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/product/state/**"
+            ]
           }
         },
         "test": {
@@ -467,7 +520,8 @@
           "options": {
             "jestConfig": "libs/shared/product/state/jest.config.js",
             "tsConfig": "libs/shared/product/state/tsconfig.spec.json",
-            "setupFile": "libs/shared/product/state/src/test-setup.ts"
+            "setupFile": "libs/shared/product/state/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       },
@@ -497,7 +551,10 @@
               "libs/shared/header/tsconfig.lib.json",
               "libs/shared/header/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/header/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/header/**"
+            ]
           }
         },
         "test": {
@@ -505,7 +562,8 @@
           "options": {
             "jestConfig": "libs/shared/header/jest.config.js",
             "tsConfig": "libs/shared/header/tsconfig.spec.json",
-            "setupFile": "libs/shared/header/src/test-setup.ts"
+            "setupFile": "libs/shared/header/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       }
@@ -534,7 +592,8 @@
           "options": {
             "jestConfig": "libs/products/product-detail-page/jest.config.js",
             "tsConfig": "libs/products/product-detail-page/tsconfig.spec.json",
-            "setupFile": "libs/products/product-detail-page/src/test-setup.ts"
+            "setupFile": "libs/products/product-detail-page/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       },
@@ -553,8 +612,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/styles/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/styles/**"]
+            "tsConfig": [
+              "libs/shared/styles/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/styles/**"
+            ]
           }
         }
       }
