--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@angular/router": "9.1.13",
     "@emotion/core": "10.0.27",
     "@emotion/styled": "10.0.27",
-    "@ngrx/effects": "8.3.0",
-    "@ngrx/entity": "8.3.0",
-    "@ngrx/router-store": "8.3.0",
-    "@ngrx/store": "8.3.0",
-    "@nrwl/angular": "9.0.4",
+    "@ngrx/effects": "9.0.0",
+    "@ngrx/entity": "9.0.0",
+    "@ngrx/router-store": "9.0.0",
+    "@ngrx/store": "9.0.0",
+    "@nrwl/angular": "9.1.4",
     "core-js": "^2.5.4",
     "document-register-element": "1.13.1",
     "firebase": ">= 5.5.7 <7",
@@ -61,13 +61,13 @@
     "@angular/compiler-cli": "9.1.13",
     "@angular/language-service": "9.1.13",
     "@babel/preset-react": "7.0.0",
-    "@ngrx/store-devtools": "8.3.0",
-    "@nrwl/cypress": "9.0.4",
+    "@ngrx/store-devtools": "9.0.0",
+    "@nrwl/cypress": "9.1.4",
     "@nrwl/insights": "^8.12.3",
-    "@nrwl/jest": "9.0.4",
-    "@nrwl/react": "9.0.4",
-    "@nrwl/web": "9.0.4",
-    "@nrwl/workspace": "9.0.4",
+    "@nrwl/jest": "9.1.4",
+    "@nrwl/react": "9.1.4",
+    "@nrwl/web": "9.1.4",
+    "@nrwl/workspace": "9.1.4",
     "@testing-library/react": "9.4.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
@@ -88,7 +88,7 @@
     "prettier": "1.19.1",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "tslint": "6.0.0",
     "typescript": "3.7.7"
   }
 }
