--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@ngrx/entity": "9.0.0",
     "@ngrx/router-store": "9.0.0",
     "@ngrx/store": "9.0.0",
-    "@nrwl/angular": "9.1.4",
+    "@nrwl/angular": "9.2.4",
     "core-js": "^2.5.4",
     "document-register-element": "1.13.1",
     "firebase": ">= 5.5.7 <7",
@@ -52,24 +52,24 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
-    "rxjs": "~6.5.3",
+    "rxjs": "6.5.5",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.7",
-    "@angular/cli": "9.0.7",
+    "@angular-devkit/build-angular": "0.901.15",
+    "@angular/cli": "9.1.15",
     "@angular/compiler-cli": "9.1.13",
     "@angular/language-service": "9.1.13",
     "@babel/preset-react": "7.0.0",
     "@ngrx/store-devtools": "9.0.0",
-    "@nrwl/cypress": "9.1.4",
+    "@nrwl/cypress": "9.2.4",
     "@nrwl/insights": "^8.12.3",
-    "@nrwl/jest": "9.1.4",
-    "@nrwl/react": "9.1.4",
-    "@nrwl/web": "9.1.4",
-    "@nrwl/workspace": "9.1.4",
+    "@nrwl/jest": "9.2.4",
+    "@nrwl/react": "9.2.4",
+    "@nrwl/web": "9.2.4",
+    "@nrwl/workspace": "9.2.4",
     "@testing-library/react": "9.4.0",
-    "@types/jest": "24.0.9",
+    "@types/jest": "25.1.4",
     "@types/node": "~8.9.4",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
@@ -81,14 +81,14 @@
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jest": "24.1.0",
+    "jest": "25.2.4",
     "jest-environment-jsdom-fourteen": "^0.1.0",
-    "jest-preset-angular": "8.0.0",
+    "jest-preset-angular": "8.1.3",
     "netlify": "^2.4.8",
     "prettier": "1.19.1",
-    "ts-jest": "24.0.0",
+    "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "6.0.0",
-    "typescript": "3.7.7"
+    "typescript": "3.8.3"
   }
 }
