run migration to 9.2

--- a/angular.json
+++ b/angular.json
@@ -93,10 +93,7 @@
               "apps/products/tsconfig.app.json",
               "apps/products/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/products/**"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/products/**"]
           }
         },
         "test": {
@@ -142,10 +139,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "apps/products-e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/products-e2e/**"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/products-e2e/**"]
           }
         }
       }
@@ -184,7 +178,8 @@
               "libs/shared/header/index.scss",
               "node_modules/normalize.css/normalize.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "buildLibsFromSource": true
           },
           "configurations": {
             "production": {
@@ -229,10 +224,7 @@
               "apps/cart/tsconfig.app.json",
               "apps/cart/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/cart/**"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/cart/**"]
           }
         },
         "test": {
@@ -278,10 +270,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "apps/cart-e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/cart-e2e/**"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/cart-e2e/**"]
           }
         }
       }
@@ -295,13 +284,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "libs/shared/product/types/tsconfig.lib.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/product/types/**"
-            ]
+            "tsConfig": ["libs/shared/product/types/tsconfig.lib.json"],
+            "exclude": ["**/node_modules/**", "!libs/shared/product/types/**"]
           }
         }
       }
@@ -315,13 +299,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "libs/shared/product/data/tsconfig.lib.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/product/data/**"
-            ]
+            "tsConfig": ["libs/shared/product/data/tsconfig.lib.json"],
+            "exclude": ["**/node_modules/**", "!libs/shared/product/data/**"]
           }
         }
       }
@@ -339,10 +318,7 @@
               "libs/shared/product/ui/tsconfig.lib.json",
               "libs/shared/product/ui/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/product/ui/**"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/shared/product/ui/**"]
           }
         },
         "test": {
@@ -369,10 +345,7 @@
               "libs/products/home-page/tsconfig.lib.json",
               "libs/products/home-page/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/products/home-page/**"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/products/home-page/**"]
           }
         },
         "test": {
@@ -404,10 +377,7 @@
               "libs/cart/cart-page/tsconfig.lib.json",
               "libs/cart/cart-page/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/cart/cart-page/**"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/cart/cart-page/**"]
           }
         },
         "test": {
@@ -430,13 +400,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "libs/shared/e2e-utils/tsconfig.lib.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/e2e-utils/**"
-            ]
+            "tsConfig": ["libs/shared/e2e-utils/tsconfig.lib.json"],
+            "exclude": ["**/node_modules/**", "!libs/shared/e2e-utils/**"]
           }
         }
       }
@@ -450,13 +415,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "libs/shared/jsxify/tsconfig.lib.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/jsxify/**"
-            ]
+            "tsConfig": ["libs/shared/jsxify/tsconfig.lib.json"],
+            "exclude": ["**/node_modules/**", "!libs/shared/jsxify/**"]
           }
         }
       }
@@ -474,10 +434,7 @@
               "libs/shared/cart/state/tsconfig.lib.json",
               "libs/shared/cart/state/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/cart/state/**"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/shared/cart/state/**"]
           }
         },
         "test": {
@@ -509,10 +466,7 @@
               "libs/shared/product/state/tsconfig.lib.json",
               "libs/shared/product/state/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/product/state/**"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/shared/product/state/**"]
           }
         },
         "test": {
@@ -551,10 +505,7 @@
               "libs/shared/header/tsconfig.lib.json",
               "libs/shared/header/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/header/**"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/shared/header/**"]
           }
         },
         "test": {
@@ -612,13 +563,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "libs/shared/styles/tsconfig.lib.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/shared/styles/**"
-            ]
+            "tsConfig": ["libs/shared/styles/tsconfig.lib.json"],
+            "exclude": ["**/node_modules/**", "!libs/shared/styles/**"]
           }
         }
       }
