run migration to 10.0

--- a/nx.json
+++ b/nx.json
@@ -3,9 +3,9 @@
   "implicitDependencies": {
     "angular.json": "*",
     "package.json": "*",
-    "tsconfig.json": "*",
     "tslint.json": "*",
-    "nx.json": "*"
+    "nx.json": "*",
+    "tsconfig.base.json": "*"
   },
   "tasksRunnerOptions": {
     "default": {
@@ -72,5 +72,8 @@
     "shared-styles": {
       "tags": ["scope:shared", "type:styles"]
     }
+  },
+  "affected": {
+    "defaultBase": "master"
   }
 }
