--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "@angular/compiler-cli": "10.2.5",
     "@angular/language-service": "10.2.5",
     "@babel/preset-react": "7.0.0",
+    "@emotion/babel-preset-css-prop": "10.0.27",
     "@ngrx/store-devtools": "10.0.0",
+    "@nrwl/cli": "10.3.3",
     "@nrwl/cypress": "10.3.3",
     "@nrwl/insights": "^8.12.3",
     "@nrwl/jest": "10.3.3",
@@ -89,7 +91,6 @@
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "6.0.0",
-    "typescript": "4.0.7",
-    "@emotion/babel-preset-css-prop": "10.0.27"
+    "typescript": "4.0.7"
   }
 }
