run migration to 10.4

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
-    "update": "ng update @nrwl/workspace",
+    "update": "nx migrate latest",
     "update:check": "ng update",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
@@ -49,8 +49,8 @@
     "document-register-element": "1.13.1",
     "firebase": ">= 5.5.7 <7",
     "normalize.css": "^8.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
     "rxjs": "6.5.5",
     "zone.js": "^0.10.3"
@@ -63,19 +63,20 @@
     "@babel/preset-react": "7.0.0",
     "@emotion/babel-preset-css-prop": "10.0.27",
     "@ngrx/store-devtools": "10.0.0",
-    "@nrwl/cli": "10.3.3",
+    "@nrwl/cli": "10.4.15",
     "@nrwl/cypress": "10.4.15",
     "@nrwl/insights": "^8.12.3",
     "@nrwl/jest": "10.4.15",
     "@nrwl/react": "10.4.15",
+    "@nrwl/tao": "10.4.15",
     "@nrwl/web": "10.4.15",
     "@nrwl/workspace": "10.4.15",
-    "@testing-library/react": "10.4.1",
+    "@testing-library/react": "11.1.2",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
-    "@types/react": "16.9.38",
-    "@types/react-dom": "16.9.8",
-    "@types/react-router-dom": "5.1.5",
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
+    "@types/react-router-dom": "5.1.6",
     "codelyzer": "~5.0.1",
     "cypress": "^3.8.2",
     "dotenv": "6.2.0",
