--- a/package.json
+++ b/package.json
@@ -30,21 +30,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.2.5",
-    "@angular/common": "10.2.5",
-    "@angular/compiler": "10.2.5",
-    "@angular/core": "10.2.5",
-    "@angular/forms": "10.2.5",
-    "@angular/platform-browser": "10.2.5",
-    "@angular/platform-browser-dynamic": "10.2.5",
-    "@angular/router": "10.2.5",
+    "@angular/animations": "11.2.14",
+    "@angular/common": "11.2.14",
+    "@angular/compiler": "11.2.14",
+    "@angular/core": "11.2.14",
+    "@angular/forms": "11.2.14",
+    "@angular/platform-browser": "11.2.14",
+    "@angular/platform-browser-dynamic": "11.2.14",
+    "@angular/router": "11.2.14",
     "@emotion/core": "10.0.28",
-    "@emotion/styled": "10.0.27",
+    "@emotion/styled": "11.0.0",
     "@ngrx/effects": "10.0.0",
     "@ngrx/entity": "10.0.0",
     "@ngrx/router-store": "10.0.0",
     "@ngrx/store": "10.0.0",
-    "@nrwl/angular": "10.4.15",
+    "@nrwl/angular": "11.0.20",
     "core-js": "^2.5.4",
     "document-register-element": "1.13.1",
     "firebase": ">= 5.5.7 <7",
@@ -56,28 +56,28 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.7",
-    "@angular/cli": "10.1.7",
-    "@angular/compiler-cli": "10.2.5",
-    "@angular/language-service": "10.2.5",
+    "@angular-devkit/build-angular": "0.1100.7",
+    "@angular/cli": "11.0.7",
+    "@angular/compiler-cli": "11.2.14",
+    "@angular/language-service": "11.2.14",
     "@babel/preset-react": "7.0.0",
-    "@emotion/babel-preset-css-prop": "10.0.27",
+    "@emotion/babel-preset-css-prop": "11.0.0",
     "@ngrx/store-devtools": "10.0.0",
-    "@nrwl/cli": "10.4.15",
-    "@nrwl/cypress": "10.4.15",
+    "@nrwl/cli": "11.0.20",
+    "@nrwl/cypress": "11.0.20",
     "@nrwl/insights": "^8.12.3",
-    "@nrwl/jest": "10.4.15",
-    "@nrwl/react": "10.4.15",
-    "@nrwl/tao": "10.4.15",
-    "@nrwl/web": "10.4.15",
-    "@nrwl/workspace": "10.4.15",
+    "@nrwl/jest": "11.0.20",
+    "@nrwl/react": "11.0.20",
+    "@nrwl/tao": "11.0.20",
+    "@nrwl/web": "11.0.20",
+    "@nrwl/workspace": "11.0.20",
     "@testing-library/react": "11.1.2",
     "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "12.12.38",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "@types/react-router-dom": "5.1.6",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "6.0.2",
     "cypress": "^3.8.2",
     "dotenv": "6.2.0",
     "firebase-tools": "^7.2.2",
@@ -90,8 +90,8 @@
     "netlify": "^2.4.8",
     "prettier": "2.1.2",
     "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "6.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
     "typescript": "4.0.7"
   }
 }
