run migration to 11.0

--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -67,7 +66,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -93,7 +95,10 @@
               "apps/products/tsconfig.app.json",
               "apps/products/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/products/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/products/**/*"
+            ]
           }
         },
         "test": {
@@ -101,7 +106,10 @@
           "options": {
             "jestConfig": "apps/products/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/products"
+          ]
         },
         "deploy": {
           "builder": "@nrwl/workspace:run-commands",
@@ -137,7 +145,10 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "apps/products-e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**", "!apps/products-e2e/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/products-e2e/**/*"
+            ]
           }
         }
       }
@@ -202,7 +213,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@nrwl/web:dev-server",
@@ -222,7 +236,10 @@
               "apps/cart/tsconfig.app.json",
               "apps/cart/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/cart/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/cart/**/*"
+            ]
           }
         },
         "test": {
@@ -230,7 +247,10 @@
           "options": {
             "jestConfig": "apps/cart/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/apps/cart"
+          ]
         },
         "deploy": {
           "builder": "@nrwl/workspace:run-commands",
@@ -266,7 +286,10 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "apps/cart-e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**", "!apps/cart-e2e/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/cart-e2e/**/*"
+            ]
           }
         }
       }
@@ -280,8 +303,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/product/types/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/product/types/**/*"]
+            "tsConfig": [
+              "libs/shared/product/types/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/product/types/**/*"
+            ]
           }
         }
       }
@@ -295,8 +323,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/product/data/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/product/data/**/*"]
+            "tsConfig": [
+              "libs/shared/product/data/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/product/data/**/*"
+            ]
           }
         }
       }
@@ -314,7 +347,10 @@
               "libs/shared/product/ui/tsconfig.lib.json",
               "libs/shared/product/ui/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/product/ui/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/product/ui/**/*"
+            ]
           }
         },
         "test": {
@@ -322,7 +358,10 @@
           "options": {
             "jestConfig": "libs/shared/product/ui/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/shared/product/ui"
+          ]
         }
       }
     },
@@ -339,7 +378,10 @@
               "libs/products/home-page/tsconfig.lib.json",
               "libs/products/home-page/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/products/home-page/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/products/home-page/**/*"
+            ]
           }
         },
         "test": {
@@ -347,7 +389,10 @@
           "options": {
             "jestConfig": "libs/products/home-page/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/products/home-page"
+          ]
         }
       },
       "schematics": {
@@ -369,7 +414,10 @@
               "libs/cart/cart-page/tsconfig.lib.json",
               "libs/cart/cart-page/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/cart/cart-page/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/cart/cart-page/**/*"
+            ]
           }
         },
         "test": {
@@ -377,7 +425,10 @@
           "options": {
             "jestConfig": "libs/cart/cart-page/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/cart/cart-page"
+          ]
         }
       }
     },
@@ -390,8 +441,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/e2e-utils/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/e2e-utils/**/*"]
+            "tsConfig": [
+              "libs/shared/e2e-utils/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/e2e-utils/**/*"
+            ]
           }
         }
       }
@@ -405,8 +461,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/jsxify/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/jsxify/**/*"]
+            "tsConfig": [
+              "libs/shared/jsxify/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/jsxify/**/*"
+            ]
           }
         }
       }
@@ -424,7 +485,10 @@
               "libs/shared/cart/state/tsconfig.lib.json",
               "libs/shared/cart/state/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/cart/state/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/cart/state/**/*"
+            ]
           }
         },
         "test": {
@@ -432,7 +496,10 @@
           "options": {
             "jestConfig": "libs/shared/cart/state/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/shared/cart/state"
+          ]
         }
       },
       "schematics": {
@@ -454,7 +521,10 @@
               "libs/shared/product/state/tsconfig.lib.json",
               "libs/shared/product/state/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/product/state/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/product/state/**/*"
+            ]
           }
         },
         "test": {
@@ -462,7 +532,10 @@
           "options": {
             "jestConfig": "libs/shared/product/state/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/shared/product/state"
+          ]
         }
       },
       "schematics": {
@@ -491,7 +564,10 @@
               "libs/shared/header/tsconfig.lib.json",
               "libs/shared/header/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/shared/header/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/header/**/*"
+            ]
           }
         },
         "test": {
@@ -499,7 +575,10 @@
           "options": {
             "jestConfig": "libs/shared/header/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/shared/header"
+          ]
         }
       }
     },
@@ -527,7 +606,10 @@
           "options": {
             "jestConfig": "libs/products/product-detail-page/jest.config.js",
             "passWithNoTests": true
-          }
+          },
+          "outputs": [
+            "coverage/libs/products/product-detail-page"
+          ]
         }
       },
       "schematics": {
@@ -545,8 +627,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["libs/shared/styles/tsconfig.lib.json"],
-            "exclude": ["**/node_modules/**", "!libs/shared/styles/**/*"]
+            "tsConfig": [
+              "libs/shared/styles/tsconfig.lib.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/shared/styles/**/*"
+            ]
           }
         }
       }
