--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@angular/router": "11.2.14",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "11.0.0",
-    "@ngrx/effects": "10.0.0",
-    "@ngrx/entity": "10.0.0",
-    "@ngrx/router-store": "10.0.0",
-    "@ngrx/store": "10.0.0",
-    "@nrwl/angular": "11.2.12",
+    "@ngrx/effects": "11.0.0",
+    "@ngrx/entity": "11.0.0",
+    "@ngrx/router-store": "11.0.0",
+    "@ngrx/store": "11.0.0",
+    "@nrwl/angular": "11.3.2",
     "core-js": "^2.5.4",
     "document-register-element": "1.13.1",
     "firebase": ">= 5.5.7 <7",
@@ -53,24 +53,25 @@
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
     "rxjs": "6.5.5",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.10.3",
+    "@ngrx/component-store": "11.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1100.7",
-    "@angular/cli": "11.0.7",
+    "@angular-devkit/build-angular": "0.1102.13",
+    "@angular/cli": "11.2.13",
     "@angular/compiler-cli": "11.2.14",
     "@angular/language-service": "11.2.14",
     "@babel/preset-react": "7.0.0",
     "@emotion/babel-preset-css-prop": "11.0.0",
-    "@ngrx/store-devtools": "10.0.0",
-    "@nrwl/cli": "11.2.12",
-    "@nrwl/cypress": "11.2.12",
+    "@ngrx/store-devtools": "11.0.0",
+    "@nrwl/cli": "11.3.2",
+    "@nrwl/cypress": "11.3.2",
     "@nrwl/insights": "^8.12.3",
-    "@nrwl/jest": "11.2.12",
-    "@nrwl/react": "11.2.12",
-    "@nrwl/tao": "11.2.12",
-    "@nrwl/web": "11.2.12",
-    "@nrwl/workspace": "11.2.12",
+    "@nrwl/jest": "11.3.2",
+    "@nrwl/react": "11.3.2",
+    "@nrwl/tao": "11.3.2",
+    "@nrwl/web": "11.3.2",
+    "@nrwl/workspace": "11.3.2",
     "@testing-library/react": "11.1.2",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
