--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "nx": "nx",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && node ./decorate-angular-cli.js",
+    "postinstall": "ngcc --properties es2015 browser module main && node ./decorate-angular-cli.js",
     "workspace-generator": "nx workspace-generator"
   },
   "private": true,
@@ -62,7 +62,6 @@
     "@angular/compiler-cli": "11.2.14",
     "@angular/language-service": "11.2.14",
     "@babel/preset-react": "7.0.0",
-    "@emotion/babel-preset-css-prop": "11.0.0",
     "@ngrx/store-devtools": "11.0.0",
     "@nrwl/cli": "12.0.8",
     "@nrwl/cypress": "12.0.8",
@@ -93,6 +92,7 @@
     "ts-jest": "26.4.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.7"
+    "typescript": "4.0.7",
+    "@emotion/babel-plugin": "11.2.0"
   }
 }
