--- a/package.json
+++ b/package.json
@@ -30,21 +30,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.14",
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/forms": "11.2.14",
-    "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@angular/router": "11.2.14",
+    "@angular/animations": "12.0.1",
+    "@angular/common": "12.0.1",
+    "@angular/compiler": "12.0.1",
+    "@angular/core": "12.0.1",
+    "@angular/forms": "12.0.1",
+    "@angular/platform-browser": "12.0.1",
+    "@angular/platform-browser-dynamic": "12.0.1",
+    "@angular/router": "12.0.1",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "11.1.5",
-    "@ngrx/effects": "11.1.0",
-    "@ngrx/entity": "11.1.0",
-    "@ngrx/router-store": "11.1.0",
-    "@ngrx/store": "11.1.0",
-    "@nrwl/angular": "12.2.0",
+    "@ngrx/effects": "12.0.0",
+    "@ngrx/entity": "12.0.0",
+    "@ngrx/router-store": "12.0.0",
+    "@ngrx/store": "12.0.0",
+    "@nrwl/angular": "12.3.4",
     "core-js": "^2.5.4",
     "document-register-element": "1.13.1",
     "firebase": ">= 5.5.7 <7",
@@ -53,24 +53,24 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
     "rxjs": "6.5.5",
-    "zone.js": "^0.10.3",
-    "@ngrx/component-store": "11.1.0"
+    "zone.js": "0.11.4",
+    "@ngrx/component-store": "12.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.13",
-    "@angular/cli": "11.2.13",
-    "@angular/compiler-cli": "11.2.14",
-    "@angular/language-service": "11.2.14",
+    "@angular-devkit/build-angular": "12.0.1",
+    "@angular/cli": "12.0.1",
+    "@angular/compiler-cli": "12.0.1",
+    "@angular/language-service": "12.0.1",
     "@babel/preset-react": "7.0.0",
-    "@ngrx/store-devtools": "11.1.0",
-    "@nrwl/cli": "12.2.0",
-    "@nrwl/cypress": "12.2.0",
+    "@ngrx/store-devtools": "12.0.0",
+    "@nrwl/cli": "12.3.4",
+    "@nrwl/cypress": "12.3.4",
     "@nrwl/insights": "^8.12.3",
-    "@nrwl/jest": "12.2.0",
-    "@nrwl/react": "12.2.0",
-    "@nrwl/tao": "12.2.0",
-    "@nrwl/web": "12.2.0",
-    "@nrwl/workspace": "12.2.0",
+    "@nrwl/jest": "12.3.4",
+    "@nrwl/react": "12.3.4",
+    "@nrwl/tao": "12.3.4",
+    "@nrwl/web": "12.3.4",
+    "@nrwl/workspace": "12.3.4",
     "@testing-library/react": "11.2.5",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
@@ -92,7 +92,7 @@
     "ts-jest": "26.5.5",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.7",
+    "typescript": "4.2.4",
     "@emotion/babel-plugin": "11.2.0"
   }
 }
