--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,14 @@
               "libs/shared/header/index.scss",
               "node_modules/normalize.css/normalize.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "aot": false,
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
