--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
     "rxjs": "6.5.5",
-    "zone.js": "0.11.4",
+    "zone.js": "~0.11.4",
     "@ngrx/component-store": "12.0.0"
   },
   "devDependencies": {
