--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/router": "12.0.1",
     "@emotion/core": "10.0.28",
     "@emotion/styled": "11.1.5",
+    "@ngrx/component-store": "12.0.0",
     "@ngrx/effects": "12.0.0",
     "@ngrx/entity": "12.0.0",
     "@ngrx/router-store": "12.0.0",
@@ -53,8 +54,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
     "rxjs": "6.5.5",
-    "zone.js": "~0.11.4",
-    "@ngrx/component-store": "12.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.0.1",
@@ -62,7 +62,8 @@
     "@angular/compiler-cli": "12.0.1",
     "@angular/language-service": "12.0.1",
     "@babel/preset-react": "7.0.0",
-    "@ngrx/store-devtools": "12.0.0",
+    "@emotion/babel-plugin": "11.2.0",
+    "@ngrx/store-devtools": "^12.0.0",
     "@nrwl/cli": "12.3.4",
     "@nrwl/cypress": "12.3.4",
     "@nrwl/insights": "^8.12.3",
@@ -92,7 +93,6 @@
     "ts-jest": "26.5.5",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.2.4",
-    "@emotion/babel-plugin": "11.2.0"
+    "typescript": "4.2.4"
   }
 }
